# duckdb-extension-lite

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker.yml
src/: quack_extension.cpp  setup.sql
